--- a/.github/workflows/npm-publish-workflow.yml
+++ b/.github/workflows/npm-publish-workflow.yml
@@ -9,24 +9,10 @@ on:
       - 'main'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x, 19.x]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: ${{ github.event_name == 'release' }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -35,6 +21,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npx tsc
-      - run: cd build && npm publish
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
